[gd_scene load_steps=20 format=2]

[ext_resource path="res://Actors/Enemy/spearman.gd" type="Script" id=1]
[ext_resource path="res://Actors/enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Actors/Enemies/spear.png" type="Texture" id=3]
[ext_resource path="res://Assets/Actors/Enemies_attacks/spearman_attack.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Weapon/Spearman/Weapon.gd" type="Script" id=5]
[ext_resource path="res://Scripts/States/SpearmanStates/run_spearman_state.gd" type="Script" id=6]
[ext_resource path="res://Scripts/States/SpearmanStates/idle_spearman_state.gd" type="Script" id=7]
[ext_resource path="res://Scripts/States/SpearmanStates/dead_spearman_state.gd" type="Script" id=8]
[ext_resource path="res://Scripts/States/SpearmanStates/attack_spearman_state.gd" type="Script" id=9]
[ext_resource path="res://Scripts/States/SpearmanStates/hit_spearman_state.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144.42, 73.8015 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.45447, 17.5107 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.9602, 23.1243 )

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.16438, 17.3437 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Images:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "dead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Images:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Images:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Images:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[node name="Spearman" groups=[
"Enemies",
] instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Images" parent="pivot" index="0"]
texture = ExtResource( 3 )
flip_h = true
hframes = 16
frame = 1

[node name="AttackArea" type="Area2D" parent="pivot" index="1"]
position = Vector2( 107.471, 27.2358 )
scale = Vector2( 0.76, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/AttackArea" index="0"]
position = Vector2( 1.70859, -55.1985 )
shape = SubResource( 1 )

[node name="DamageDetector" type="Area2D" parent="pivot" index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/DamageDetector" index="0"]
shape = SubResource( 2 )

[node name="Attack" type="Area2D" parent="pivot" index="3" groups=[
"EnemyWeapon",
]]
visible = false
position = Vector2( 31.3631, -0.435478 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/Attack" index="0"]
position = Vector2( 3.1631, 10.8449 )
scale = Vector2( -2.17286, 0.341904 )
shape = SubResource( 3 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="pivot/Attack" index="1"]
anims/attack = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="pivot/Attack" index="2"]
position = Vector2( 2.93716, 10.619 )
texture = ExtResource( 4 )
hframes = 3

[node name="RayCast2D" type="RayCast2D" parent="pivot" index="4"]
position = Vector2( 10, 9 )
enabled = true
exclude_parent = false
cast_to = Vector2( 10, 0 )
collision_mask = 8

[node name="RayCast2D2" type="RayCast2D" parent="pivot" index="5"]
position = Vector2( 10, 13 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8

[node name="Collision" parent="." index="1"]
position = Vector2( 1.18751, 0.148438 )
shape = SubResource( 5 )

[node name="Run" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 6 )

[node name="Idle" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 7 )

[node name="Dead" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 8 )

[node name="Attack" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 9 )

[node name="Hit" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 10 )

[node name="Anim" parent="." index="3"]
anims/attack_1 = SubResource( 6 )
anims/dead = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/run = SubResource( 9 )

[node name="Label" type="Label" parent="." index="4"]
margin_left = -17.8505
margin_top = -30.9163
margin_right = 22.1495
margin_bottom = -16.9163
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="health_changed" from="." to="." method="_on_Spearman_health_changed"]
[connection signal="body_entered" from="pivot/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="pivot/AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="area_entered" from="pivot/DamageDetector" to="." method="_on_DamageDetector_area_entered"]
